Move to Java 25